# sphinx-makdown-example

./: README.md  README.rst  pyproject.toml
docs/source/: conf.py  index.md  index.rst
tests/: test_sphinx_doc.py
