[tool.poetry]
name = "sphinx-doc"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^6.2.5"
Sphinx = "^4.3.2"
myst-parser = "^0.16.1"
sphinx-material = "^0.0.35"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
